<resources>
    <string name="app_name">APS</string>
    <string name="Usuario">Usuario</string>
    <string name="Senha">Senha</string>
    <string name="Entrar">Entrar</string>
    <string name="Cadastrar">Cadastro</string>
    <string name="Salvar">Salvar</string>
    <string name="novacompra">Nova Compra</string>
    <string name="outrascompras">Outras Compras</string>
    <string name="comprasusu">Compras Usuario</string>
    <string name="reset">Resetar Banco de dados</string>
    <string name="ende">Endereco</string>
    <string name="lat">Latitude</string>
    <string name="longe">Longitude</string>
    <string name="stab">Estabelecimento</string>
    <string name="adi">Adicionar Iten</string>
    <string name="iten">Item</string>
    <string name="itens">Itens da Compra</string>
    <string name="custo">Valor unidade</string>
    <string name="quantidade">Quantidade</string>
    <string name="add">Adicionar</string>
    <string name="ndd">Finalizar</string>
    <string name="obs1">Adicione todos os itens da compra antes de finalizar.</string>
    <string name="obs2">Usar "'.'" em vez de "','" no valor unico.</string>
    <string-array name="LD">
        <item>Local</item>
        <item>Data</item>
        <item>ID</item>
    </string-array>
    <string-array name="LI">
        <item>Nome</item>
        <item>Quantidade</item>
        <item>Valor unidade</item>
    </string-array>
    <string name="vo">voltar</string>
    <string name="Ca">Todas as compras no sistema</string>
    <string name="odl">Ordenar por local</string>
    <string name="odt">Ordenar por Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="TCM">Mapa dos Estabelecimentos</string>
</resources>
